--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Tópicos IA</title>
+		<title>Proyecto Final de Carrera</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
-		<h1> Tópicos IA </h1>
+		<h1> Proyecto Final de Carrera </h1>
 		<div id="wrapper">    
 			<h2> Resultados </h2>
 			<div class="center">
@@ -14,7 +14,7 @@
 				<audio controls>
   					<source src="audio-01.wav" type="audio/wav">
   				</audio><br>
-				Topics in Artificial Intelligence <br>
+				Final Career Project <br>
 				<audio controls>
   					<source src="audio-02.wav" type="audio/wav">
   				</audio><br>
